--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -316,6 +316,8 @@
     <string name="lbl_backup">Резервная копия</string>
     <string name="lbl_barcode">Штрих-код</string>
     <string name="lbl_book">Книга</string>
+    <string name="pc_bob_list">Список</string>
+    <string name="pc_bob_layout">Расположение списка</string>
     <string name="pc_book_detail_screen">Страница сведений о книге</string>
     <string name="lbl_book_type">Тип книги</string>
     <string name="lbl_books">книги</string>
@@ -797,4 +799,7 @@
     <string name="ps_show_titles_reordered_off">С сайта</string>
     <!-- NOT APPLICABLE FOR BOOKS IN RUSSIAN. Empty string. -->
     <string name="pv_reformat_titles_prefixes">""</string>
+    <string name="pt_bob_cover_click">Нажатие на изображение обложки.</string>
+    <string name="pe_bob_cover_click_zoom">Увеличение изображения обложки.</string>
+    <string name="pe_bob_cover_click_details">Откроется страница с подробной информацией о книге.</string>
 </resources>
