--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
@@ -17,7 +18,9 @@
   ~
   ~ You should have received a copy of the GNU General Public License
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
-  --><!DOCTYPE resources [
+  -->
+
+<!DOCTYPE resources [
 <!ENTITY APP_NAME "NeverTooManyBooks">
 ]>
 <!--suppress LongLine --><resources>
@@ -291,4 +294,5 @@
     <!-- NOT APPLICABLE FOR BOOKS IN CHINESE; Just show "Off"; it will still be used for other languages. -->
     <string name="ps_show_titles_reordered_off">关闭</string>
     <!-- NOT APPLICABLE FOR BOOKS IN CHINESE. Empty string. -->
+    <string name="pv_reformat_titles_prefixes">""</string>
 </resources>
