--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -229,7 +229,7 @@
     <string name="error_search_x_failed_y">Suche auf %1$s fehlgeschlagen: %2$s</string>
     <string name="error_site_authentication_failed">Authentifizierung bei %1$s fehlgeschlagen</string>
     <string name="error_http_401_site_authorization_failed">Die Autorisierung bei %1$s endete fehlerhaft.</string>
-    <string name="error_storage_no_space_left">Nicht genügend Speicher verfügbar.</string>
+    <string name="error_insufficient_storage">Nicht genügend Speicherplatz.</string>
     <string name="error_http_403_site_forbidden">%1$s hat den Zugriff blockiert.</string>
     <string name="error_http_403_forbidden">Die Website hat den Zugang gesperrt.</string>
     <string name="error_storage_not_accessible">Bitte überprüfen Sie, ob der Speicher verfügbar ist.</string>
