--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -233,7 +233,7 @@
     <string name="error_search_x_failed_y">Échec de la recherche sur %1$s : %2$s</string>
     <string name="error_site_authentication_failed">L’authentification %1$s a échoué</string>
     <string name="error_http_401_site_authorization_failed">Autorisation %1$s en erreur.</string>
-    <string name="error_storage_no_space_left">Stockage insuffisant disponible.</string>
+    <string name="error_insufficient_storage">Espace de stockage insuffisant.</string>
     <string name="error_http_403_site_forbidden">%1$s a bloqué l’accès.</string>
     <string name="error_http_403_forbidden">Le site web a bloqué l’accès.</string>
     <string name="error_storage_not_accessible">Veuillez vérifier que le stockage est accessible.</string>
