--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -248,7 +248,7 @@
     <string name="error_search_x_failed_y">Wyszukiwanie w %1$s nie powiodło się: %2$s</string>
     <string name="error_site_authentication_failed">Uwierzytelnienie %1$s nie powiodło się</string>
     <string name="error_http_401_site_authorization_failed">Autoryzacja %1$s spowodowała błąd.</string>
-    <string name="error_storage_no_space_left">Niewystarczająca pamięć dostępna.</string>
+    <string name="error_insufficient_storage">Za mało miejsca w pamięci.</string>
     <string name="error_http_403_site_forbidden">%1$s zablokował dostęp.</string>
     <string name="error_http_403_forbidden">Witryna zablokowała dostęp.</string>
     <string name="error_storage_not_accessible">Sprawdź, czy pamięć jest dostępna.</string>
