--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -235,7 +235,7 @@
     <string name="error_search_x_failed_y">%1$s’de arama başarısız oldu: %2$s</string>
     <string name="error_site_authentication_failed">%1$s kimlik doğrulaması başarısız oldu</string>
     <string name="error_http_401_site_authorization_failed">%1$s yetkilendirmesi bir hataya neden oldu.</string>
-    <string name="error_storage_no_space_left">Mevcut depolama yetersiz.</string>
+    <string name="error_insufficient_storage">Yeterli depolama alanı yok.</string>
     <string name="error_http_403_site_forbidden">%1$s erişimi engelledi.</string>
     <string name="error_http_403_forbidden">Web sitesi erişimi engelledi.</string>
     <string name="error_storage_not_accessible">Lütfen depolamanın erişilebilir olduğunu kontrol edin.</string>
