--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -649,6 +649,7 @@
     <string name="style_builtin_author_year">Autor, rok</string>
     <string name="style_builtin_compact">Kompaktní</string>
     <string name="lbl_date_read">Datum Čtení</string>
+    <string name="lbl_defaults">Výchozí aplikace</string>
     <string name="style_type_builtin">Vestavěný</string>
     <string name="style_type_user_defined">Definován uživatelem</string>
     <string name="X_lbl_system">(Systém)</string>
