--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -639,6 +639,7 @@
     <string name="style_builtin_author_year">Συγγραφέας και χρονιά</string>
     <string name="style_builtin_compact">Συμπαγής</string>
     <string name="lbl_date_read">Ημερομηνία Ανάγνωσης</string>
+    <string name="lbl_defaults">Προεπιλογές</string>
     <string name="style_type_builtin">Ενσωματωμένο</string>
     <string name="style_type_user_defined">Καθορισμενο-από-χρήστη</string>
     <string name="X_lbl_system">(Σύστημα)</string>
