--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -642,6 +642,7 @@
     <string name="style_builtin_author_year">Auteur et année</string>
     <string name="style_builtin_compact">Compact</string>
     <string name="lbl_date_read">Date de lecture</string>
+    <string name="lbl_defaults">Paramètres par défaut</string>
     <string name="style_type_builtin">Par défaut</string>
     <string name="style_type_user_defined">Défini par l’utilisateur</string>
     <string name="X_lbl_system">(Système)</string>
