--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -673,6 +673,7 @@
     <string name="style_builtin_author_series">Auteur daarna Reeks</string>
     <string name="style_builtin_author_year">Auteur en jaar</string>
     <string name="style_builtin_compact">Compact</string>
+    <string name="lbl_defaults">Standaardinstellingen</string>
     <string name="style_type_builtin">Ingebouwd</string>
     <string name="style_type_user_defined">Gebruiker-gedefinieerd</string>
     <string name="tip_authors_book_may_appear_more_than_once">Als boeken worden getoond onder alle auteurs van het boek, kunnen ze meerdere keren voorkomen in de lijst. Het verwijderen van één van die boeken heeft tot gevolg dat alle exemplaren worden verwijderd uit de lijst.</string>
