--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -653,6 +653,7 @@
     <string name="style_builtin_author_year">Autor, rok</string>
     <string name="style_builtin_compact">Kompaktowy</string>
     <string name="lbl_date_read">Data odczytu</string>
+    <string name="lbl_defaults">Domyślne</string>
     <string name="style_type_builtin">Wbudowany</string>
     <string name="style_type_user_defined">Określony przez użytkownika</string>
     <string name="X_lbl_system">(Systemowa)</string>
