--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -640,6 +640,7 @@
     <string name="style_builtin_author_year">Önce yazar sonra yıl</string>
     <string name="style_builtin_compact">Küçük</string>
     <string name="lbl_date_read">Okunan günay</string>
+    <string name="lbl_defaults">Varsayılanlar</string>
     <string name="style_type_builtin">Yerleşik</string>
     <string name="style_type_user_defined">Kullanıcı tanımlı</string>
     <string name="X_lbl_system">(Sistem)</string>
