--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1639,7 +1639,10 @@
     <!-- NOT FINAL, DO NOT TRANSLATE YET -->
     <string name="pt_normalize_publisher_name"
             translatable="false">Normalize publisher names (EXPERIMENTAL, see Help)</string>
+
     <string name="lbl_defaults">Defaults</string>
+
+    <string name="style_type_defaults">Style defaults</string>
 
     <!--    <string name="confirm_strip_info_import_collection">Do you want to import all your owned comics from the StripInfo.be website? This could take some time. We strongly advice to take a backup before proceeding!</string>-->
 
