--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -801,4 +801,5 @@
     <string name="pt_bob_cover_click">Klepnutí na obrázek obálky.</string>
     <string name="pe_bob_cover_click_zoom">Obrázek obálky se přiblíží.</string>
     <string name="pe_bob_cover_click_details">Otevře stránku s podrobnostmi o knize.</string>
+    <string name="style_type_defaults">Výchozí nastavení stylů</string>
 </resources>
