--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -783,4 +783,5 @@
     <string name="pt_bob_cover_click">Tippen Sie auf ein Titelbild.</string>
     <string name="pe_bob_cover_click_zoom">Vergrößert das Titelbild.</string>
     <string name="pe_bob_cover_click_details">Öffnet die Detailseite des Buches.</string>
+    <string name="style_type_defaults">Standardeinstellungen für Stile</string>
 </resources>
