--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -784,4 +784,5 @@
     <string name="pt_bob_cover_click">Πατώντας σε μια εικόνα εξωφύλλου.</string>
     <string name="pe_bob_cover_click_zoom">Θα μεγεθύνει την εικόνα του εξωφύλλου.</string>
     <string name="pe_bob_cover_click_details">Ανοίγει τη σελίδα με τις λεπτομέρειες του βιβλίου.</string>
+    <string name="style_type_defaults">Στυλ προεπιλεγμένες ρυθμίσεις</string>
 </resources>
