--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -817,4 +817,5 @@
     <string name="pt_bob_cover_click">Tocar numa imagem de capa.</string>
     <string name="pe_bob_cover_click_zoom">Aumentará o zoom da imagem da capa.</string>
     <string name="pe_bob_cover_click_details">Abre a página de detalhes do livro.</string>
+    <string name="style_type_defaults">Predefinições de estilo</string>
 </resources>
