--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -296,4 +296,5 @@
     <string name="ps_show_titles_reordered_off">关闭</string>
     <!-- NOT APPLICABLE FOR BOOKS IN CHINESE. Empty string. -->
     <string name="pv_reformat_titles_prefixes">""</string>
+    <string name="style_type_defaults">风格默认值</string>
 </resources>
