--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -797,8 +797,8 @@
     <string name="ps_show_titles_reordered_on">На сайте</string>
     <!-- NOT APPLICABLE FOR BOOKS IN RUSSIAN; Just show "Off"; it will still be used for other languages. -->
     <string name="ps_show_titles_reordered_off">С сайта</string>
-    <!-- NOT APPLICABLE FOR BOOKS IN RUSSIAN. Empty string. -->
-    <string name="pv_reformat_titles_prefixes">""</string>
+    <!-- NOT APPLICABLE FOR BOOKS IN RUSSIAN. A single vertical bar character. -->
+    <string name="pv_reformat_titles_prefixes">"|"</string>
     <string name="pt_bob_cover_click">Нажатие на изображение обложки.</string>
     <string name="pe_bob_cover_click_zoom">Увеличение изображения обложки.</string>
     <string name="pe_bob_cover_click_details">Откроется страница с подробной информацией о книге.</string>
