--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -164,8 +164,7 @@
     <string name="error_http_403_forbidden">The website has blocked access.</string>
     <!-- Shared Storage file system access fails for some reason. No specifics. -->
     <string name="error_storage_not_accessible">Please check that storage is accessible.</string>
-    <!-- Displayed when any write operation to the database, or to Shared Storage fails
-     TODO:  error_storage_not_accessible + error_storage_not_writable is too widely used; must be split into multiple different messages -->
+    <!-- Displayed when a write (usually a cover image) to Shared Storage fails -->
     <string name="error_storage_not_writable">Please check that storage is writable, and has sufficient space.</string>
     <!-- [VERIFIED] -->
     <string name="error_insufficient_storage">Not enough storage space.</string>
